--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "^7.0.3",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
