--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
+    "framer-motion": "^10.12.18",
     "jquery": "^3.7.0",
     "node-sass": "^7.0.3",
     "popper.js": "^1.16.1",
